--- a/html/popup.html
+++ b/html/popup.html
@@ -14,17 +14,11 @@
 	<h2>SmalsRail</h2>
 	<img id='logo' src='../images/icon.gif'>
 	<div id="data">
-		<a id="toOptions" href="#">options</a> -
-		<a id="doUdate" href="#">next train</a>
+		<a id="toOptions" href="#">options</a> 
 		<br/><br/>
 		<div id="test"></div>
 		<div id="times"></div>
 		<div id="conges"></div>
-	</div>
-	<div id="nodata">
-		Welcome to Smals Time.<br/>
-		Please setup your xtremis datas.<br/><br/>
-		An option page has been opened for you.
 	</div>
 </div>
 </body>
